src/plugins/snapshots/btstats__plugins__plugin_set__tests__plugin_set_one_update_with_complete.snap
---
source: src/plugins/plugin_set.rs
expression: plugin_set.result()
---
## Request Size
Reqs. #: 1 Reads: 1 (100.00%) Writes: 0 (0.00%) Discard: 0 (0.00%) Size:(min: 1 avg: 1.00 max: 1 (blks))
## Seek
No seeks
