src/plugins/snapshots/btstats__plugins__plugin_set__tests__plugin_set_update_with_complete.snap
---
source: src/plugins/plugin_set.rs
expression: plugin_set.result()
---
## Request Size
Reqs. #: 4 Reads: 2 (50.00%) Writes: 1 (25.00%) Discard: 1 (25.00%) Size:(min: 1 avg: 2.75 max: 4 (blks))
