src/plugins/snapshots/btstats__plugins__plugin_set__tests__plugin_set_update_with_merge.snap
---
source: src/plugins/plugin_set.rs
expression: plugin_set.result()
---
## Request Size
No updates
## Seek
No updates
## Merge
#I: 1 #F+#M: 2 ratio: 3.00
