src/plugins/snapshots/btstats__plugins__plugin_set__tests__plugin_set_update_with_non_complete.snap
---
source: src/plugins/plugin_set.rs
expression: plugin_set.result()
---
## Request Size
No updates
## Seek
No seeks
